--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         body.dark-mode .bio-container p{color:#ddd}
         body.dark-mode .social-links a{background-color:#222;color:#FFD700}
         body.dark-mode .social-links a:hover{background-color:#444;color:#fff}
-        .links a{display:block;padding:12px 18px;font-size:18px;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
+        .links a{display:block;padding:12px 18px;font-size:18px;margin:0 auto 1rem auto;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
         .links a:hover{background-color:#003580;transform:scale(1.05)}
         body.dark-mode .links a{background-color:#222;color:#FFD700}
         body.dark-mode .links a:hover{background-color:#444;color:#fff}
@@ -127,10 +127,13 @@
     <aside id="sidebar" class="sidebar">
     <button id="close-sidebar" class="close-btn">&times;</button>
     <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">DMCA</a></li>
+        <li><a href="#">Laman Diskusi</a></li>
+        <li><a href="#">Keijakan Privasi</a></li>
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="#">Testimoni</a></li>
         <li class="dropdown">
-            <a href="#">Services &#x25BE;</a>
+            <a href="#">ASIBUKA L &#x25BE;</a>
             <ul class="submenu">
                 <li><a href="#">Web Design</a></li>
                 <li><a href="#">SEO</a></li>
@@ -176,7 +179,6 @@
         <div class='slide'><blockquote>Mengedukasi masyarakat untuk mengembangkan usaha ke tahap selanjutnya.</blockquote></div>
         <div class='slide'><blockquote>Membantu kreator untuk bisa menghasilkan dari kontennya.</blockquote></div>
             </div>
-
         <!-- Navigation Buttons -->
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -187,8 +189,11 @@
     <main>
         <h2>ASIBUKA Logistics</h2>
         <div class='links'>
+            <a href='https://maps.app.goo.gl/E5aenxU1DDeQRKgp6' title='ID Express Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>ID Express Sukamenak</a>
             <a href='https://maps.app.goo.gl/E5aenxU1DDeQRKgp6' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
             <a href='https://maps.app.goo.gl/E5aenxU1DDeQRKgp6' title='SiCepat Express Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>SiCepat Express Sukamenak</a>
+            <a href='https://maps.app.goo.gl/hhKKy2GABPyWfWaU9' title='SPX Margahayu Kopo Sayati' target='_blank' rel='nofollow noopener noreferrer'>SPX Margahayu Kopo Sayati</a>
+            <a href='https://maps.app.goo.gl/bWQ7ehQSjJ9iAi8r8' title='Wahana Express Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>Wahana Express Sukamenak</a>
         </div>
     </main>
 <footer>
