--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
     <section>
         <h2>VISI</h2>
-        <blockquote>Menjadi wadah bagi pengusaha UMKM dan mengembangkan ekonomi rakyat.</blockquote>
+        <blockquote>Menjadi sarana yang membuka peluang usaha dan peluang kerja bagi sebanyak-banyaknya rakyat Indonesia.</blockquote>
         <h2>MISI</h2>
         <div class="slider-container">
         <div class="slider-wrapper">
