--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: "404 - Page Not Found"
 permalink: /404.html
-thumbnail: https://asibuka.com/img/ASIBUKA-Blue.png
+thumbnail: https://asibuka.com/assets/img/ASIBUKA-Blue.png
 description: Error 404 - Page not found. The page you are looking for doesn't exist.
 ---
 <a href="/" title="{{ site.title }}">Go back to Home</a>
