--- a/404.html
+++ b/404.html
@@ -4,5 +4,8 @@ title: "404 - Page Not Found"
 permalink: /404.html
 thumbnail: https://asibuka.com/assets/img/ASIBUKA-Blue.png
 description: Error 404 - Page not found. The page you are looking for doesn't exist.
+lang: id
+robots: noindex,nofollow
+author: ASIBUKA Group
 ---
 <a href="/" title="{{ site.title }}">Go back to Home</a>
