--- a/search.html
+++ b/search.html
@@ -3,6 +3,11 @@ layout: default
 title: Search
 permalink: /search/
 ---
+---
+layout: default
+title: Search
+permalink: /search/
+---
 
 <h1>Search</h1>
 <input type="text" id="search-box" placeholder="Type to search..." />
@@ -12,6 +17,30 @@ permalink: /search/
 <script>
   let idx = null;
   let docs = [];
+
+  function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+  }
+
+  function performSearch(query) {
+    const searchBox = document.getElementById("search-box");
+    const resultsContainer = document.getElementById("search-results");
+    searchBox.value = query;
+    resultsContainer.innerHTML = "";
+
+    if (query.length > 1 && idx) {
+      const results = idx.search(query);
+      results.forEach(result => {
+        const matched = docs.find(d => d.url === result.ref);
+        if (matched) {
+          const li = document.createElement("li");
+          li.innerHTML = `<a href="${matched.url}">${matched.title}</a>`;
+          resultsContainer.appendChild(li);
+        }
+      });
+    }
+  }
 
   fetch("{{ '/search.json' | relative_url }}")
     .then(response => response.json())
@@ -26,21 +55,14 @@ permalink: /search/
 
         json.forEach(doc => this.add(doc));
       });
+
+      const initialQuery = getQueryParam("q");
+      if (initialQuery) {
+        performSearch(initialQuery);
+      }
     });
 
   document.getElementById("search-box").addEventListener("input", function () {
-    const query = this.value.trim();
-    const resultsContainer = document.getElementById("search-results");
-    resultsContainer.innerHTML = "";
-
-    if (query.length > 1 && idx) {
-      const results = idx.search(query);
-      results.forEach(result => {
-        const matched = docs.find(d => d.url === result.ref);
-        const li = document.createElement("li");
-        li.innerHTML = `<a href="${matched.url}">${matched.title}</a>`;
-        resultsContainer.appendChild(li);
-      });
-    }
+    performSearch(this.value.trim());
   });
 </script>
