--- a/comments.html
+++ b/comments.html
@@ -5,19 +5,6 @@
   <title>Comments</title>
 </head>
 <body>
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_config = function () {
-      this.page.url = window.location.href;
-      this.page.identifier = document.location.pathname;
-    };
-
-    (function() {
-      var d = document, s = d.createElement('script');
-      s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
+  {% include disqus.html %}
 </body>
 </html>
