implement disqus to amp version

--- a/comments.html
+++ b/comments.html
@@ -11,7 +11,7 @@ this.page.identifier = parentUrl;
 //Github Default
 (function () {
 var d = document, s = d.createElement('script');
-s.src = '//SITE_SHORTNAME_ANDA_DISINI.disqus.com/embed.js';
+s.src = '//asibukagroup.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
