--- a/404.html
+++ b/404.html
@@ -8,4 +8,4 @@ lang: id
 robots: noindex,nofollow
 author: ASIBUKA Group
 ---
-<a href="/" title="{{ site.title }}">Go back to Home</a>
+<div class='text-center'><a href="/" title="{{ site.title }}">Kembali ke Beranda</a></div>
